syntax = "proto3";

package kvraftpb;

enum Op {
    Unknown = 0;
    Put = 1;
    Append = 2;
}

/// Put or Append
message PutAppendRequest {
    string key = 1;
    string value = 2;
    // "Put" or "Append"
    Op op = 3;
    // You'll have to add definitions here.
    string clerk_name = 4;
    uint64 clerk_seq = 5;
}

message PutAppendReply {
    bool wrong_leader = 1;
    string err = 2;
}

message GetRequest {
    string key = 1;
    // You'll have to add definitions here.
    string clerk_name = 4;
    uint64 clerk_seq = 5;
}

message GetReply {
    bool wrong_leader = 1;
    string err = 2;
    string value = 3;
}

enum KvOp {
    // "Kv-" to avoid conflict with `Op`
    KvGet = 0;
    kvPut = 1;
    KvAppend = 2;
}

message KvCommand {
    string key = 1;
    string value = 2;
    KvOp op = 3;
    string clerk_name = 4;
    uint64 clerk_seq = 5;
}